1997-12-13  Tim Pierce  <twp@skepsis.com>

*	* boot-9.scm (read-line): Rewritten to call %read-line for
	improved speed.  Minor user-visible changes: the new functions are
	hardwired to treat the LFD character as signifying end-of-line, so
	changing `scm-line-incrementors' will no longer affect the
	behavior of read-line.  On platforms which do not represent
	end-of-line with a LFD character, read-line should behave more
	like native line-processing facilities, but there is still a ways
	to go here.

Sat Nov 29 01:24:46 1997  Mikael Djurfeldt  <mdj@kenneth>

	* boot-9.scm (error-catching-loop, save-stack): `the-last-stack'
	is now a fluid.

1997-11-28  Tim Pierce  <twp@skepsis.com>

	* boot-9.scm (find-and-link-dynamic-module): If a module directory
	contains a .la file (a libtool support file), attempt to extract
	the shared library name from that file.  If the .la file does not
	exist, try to link against a .so file.  Libtool-generated compiled
	modules should load more cleanly in Guile now.
	(try-using-libtool-name, try-using-sharlib-name): New functions.

Sun Nov  9 06:10:59 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (set-batch-mode?!, batch-mode?): initialize more
	usefully so they will work from a script.

1997-10-31  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (inherit-print-state): Moved definition to the
	neighborhood of the record code.

Mon Oct 27 02:05:49 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	* boot-9.scm: Revert changes to this file from Oct 23.  It turns
 	out to interact badly with the Emacs support and the Tcl/Tk
 	support.  It's not a high enough priority at the moment to be
 	worth fixing.  I'm leaving the other readline support in, though.

Sat Oct 25 14:23:22 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	* Makefile.am: Include readline.scm in the list of files to be
	installed, so Guile can find it for interactive use.
	* Makefile.in: Regenerated.
